--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,7 @@
-# render.yml
-
-# Specify the type of service (in this case, a Node.js service)
 services:
   - type: web
     name: Ethix-MD
-    buildCommand: npm i
-    startCommand: npm start
+    env: docker
+    region: Frankfurt
     plan: free
-    autoDeploy: true
-
-# Specify any additional configuration or settings here
+ 
