--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "libphonenumber": "^0.0.10",
     "moment-timezone": "^0.5.45",
+    "node-cache": "^5.1.2",
+    "node-os-utils": "^1.3.7",
     "os": "^0.1.2",
     "pino": "^8.20.0",
+    "readline": "^1.3.0",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5"
   }
