--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
     "axios": "^1.6.8",
+    "chalk": "^5.3.0",
     "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
