--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "file-type": "^19.0.0"
     "fs": "^0.0.1-security",
     "libphonenumber": "^0.0.10",
     "moment-timezone": "^0.5.45",
