--- a/package.json
+++ b/package.json
@@ -5,30 +5,38 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "start": "node src/index.js -p $PORT"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alximicus/simple-node-telegram-bot-api": "^0.1.7",
+    "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
+    "api-dylux": "^1.8.3",
     "axios": "^1.6.8",
     "chalk": "^5.3.0",
     "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
-    "file-type": "^19.0.0"
+    "file-type": "^19.0.0",
     "fs": "^0.0.1-security",
+    "human-readable": "^0.2.1",
+    "jimp": "^0.16.13",
     "libphonenumber": "^0.0.10",
     "moment-timezone": "^0.5.45",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
     "os": "^0.1.2",
     "pino": "^8.20.0",
+    "proto": "^1.0.19",
     "readline": "^1.3.0",
-    "yt-search": "^2.10.4",
+    "yt-search": "^2.11.0",
     "ytdl-core": "^4.11.5"
   }
 }
