--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
     "api-dylux": "^1.8.3",
+    "awesome-phonenumber": "^6.8.0",
     "axios": "^1.6.8",
     "chalk": "^5.3.0",
     "child_process": "^1.0.2",
