--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ffmpeg": "^0.0.4",
     "file-type": "^19.0.0",
     "fs": "^0.0.1-security",
+    "generate-random-emoji": "^1.0.2",
     "human-readable": "^0.2.1",
     "jimp": "^0.16.13",
     "libphonenumber": "^0.0.10",
