--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "api-dylux": "^1.8.3",
     "awesome-phonenumber": "^6.8.0",
     "axios": "^1.6.8",
+    "betabotz-tools": "^0.0.7",
     "chalk": "^5.3.0",
     "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
