--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "pino": "^8.20.0",
     "proto": "^1.0.19",
     "readline": "^1.3.0",
+    "remove.bg": "^1.3.0",
+    "uuid": "^9.0.1",
     "yt-search": "^2.11.0",
     "ytdl-core": "^4.11.5"
   }
