--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
     "api-dylux": "^1.8.3",
+    "aptoide-scraper": "^1.0.1",
     "awesome-phonenumber": "^6.8.0",
     "axios": "^1.6.8",
     "betabotz-tools": "^0.0.7",
