--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 SESSION_ID=
 AUTO_STATUS_SEEN=true
-REJECT_CALL=true
+REJECT_CALL=false
 MODE=public
-WELCOME=true
-AUTO_REACT=true
+WELCOME=false
+AUTO_READ=false
+AUTO_TYPING=false
+AUTO_RECORDING=false
+ALWAYS_ONLINE=false
+AUTO_BLOCK=true
