--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
+    "@vitalets/google-translate-api": "^9.2.0",
     "@whiskeysockets/baileys": "^6.6.0",
     "api-dylux": "^1.8.3",
     "aptoide-scraper": "^1.0.1",
