--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
-    "@vitalets/google-translate-api": "^9.2.0",
     "@whiskeysockets/baileys": "^6.6.0",
     "api-dylux": "^1.8.3",
     "aptoide-scraper": "^1.0.1",
@@ -41,6 +40,7 @@
     "proto": "^1.0.19",
     "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
+    "translate-google-api": "^1.0.4",
     "uuid": "^9.0.1",
     "yt-search": "^2.11.0",
     "ytdl-core": "^4.11.5"
