--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "proto": "^1.0.19",
     "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
+    "tesseract.js": "^5.1.0",
     "translate-google-api": "^1.0.4",
     "uuid": "^9.0.1",
     "yt-search": "^2.11.0",
