--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "betabotz-tools": "^0.0.7",
     "chalk": "^5.3.0",
     "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
@@ -35,6 +36,7 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
+    "node-webpmux": "^3.2.0",
     "os": "^0.1.2",
     "pino": "^8.20.0",
     "proto": "^1.0.19",
