--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jimp": "^0.16.13",
     "libphonenumber": "^0.0.10",
     "moment-timezone": "^0.5.45",
+    "nayan-media-downloader": "^2.3.3",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
