--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs": "^0.0.1-security",
     "google-it": "^1.6.4",
     "human-readable": "^0.2.1",
+    "instagram-user": "^2.0.1",
     "jimp": "^0.16.13",
     "libphonenumber": "^0.0.10",
     "moment-timezone": "^0.5.45",
