--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pino": "^8.20.0",
     "pm2": "^5.4.0",
     "proto": "^1.0.19",
+    "qrcode": "^1.5.3",
     "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
     "tesseract.js": "^5.1.0",
