--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment-timezone": "^0.5.45",
     "nayan-media-downloader": "^2.3.3",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.2.0",
