--- a/heroku.yml
+++ b/heroku.yml
@@ -3,4 +3,4 @@ build:
     worker: Dockerfile
     
 run:
-  worker: pm2-runtime pm2.server.cjs --env production
+  worker: pm2-runtime server.cjs --env production
