--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "Ethix-MD",
   "version": "10.8.1",
-  "description": "Kuch v",
-  "main": "index.js",
+  "description": "Ethix-MD latest multi device whatsapp bot",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js"
   },
-  "keywords": [],
+  "keywords": ["ethix-md", "whatsapp-bot", "whatsapp md bot"],
   "author": "Ethix-Xsid",
   "license": "ISC",
   "dependencies": {
