--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 SESSION_ID=
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
-MODE=public
+MODE=private
 WELCOME=false
 AUTO_READ=false
 AUTO_TYPING=false
 AUTO_RECORDING=false
-ALWAYS_ONLINE=false
+ALWAYS_ONLINE=true
 AUTO_BLOCK=true
 AUTO_REACT=false
