--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "MODE": {
       "description": "Put Mode either public or self",
       "required": true,
-      "value": "public"
+      "value": "private"
     },
     "AUTO_STATUS_SEEN": {
       "description": "Put true if you want bot to view status",
@@ -40,7 +40,7 @@
     "ALWAYS_ONLINE": {
       "description": "Put true if you want bot to show always online",
       "required": false,
-      "value": ""
+      "value": "true"
     },
     "AUTO_BLOCK": {
       "description": "Put true if you want bot to auto block only 212 numbers",
