--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "MODE": {
       "description": "Put Mode either public or self",
       "required": true,
-      "value": "private"
+      "value": "self"
     },
     "AUTO_STATUS_SEEN": {
       "description": "Put true if you want bot to view status",
