--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "node-webpmux": "^3.2.0",
     "os": "^0.1.2",
     "pino": "^8.20.0",
-    "pm2": "^5.4.0",
+    "pm2": "latest",
     "proto": "^1.0.19",
     "qrcode": "^1.5.3",
     "readline": "^1.3.0",
