--- a/app.json
+++ b/app.json
@@ -61,18 +61,10 @@
         },
     "addons": [{ "plan": "heroku-postgresql:essential-1" }],
     "buildpacks": [
-    {
-      "url": "heroku/nodejs"
-    },
-    {
-      "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick.git"
-    },
-    {
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-    },
-    {
-      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
-    }
+    { "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest"},
+    {"url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick.git"},
+    {"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"},
+    {"url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"}
   ]
 }
 
