--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,4 @@ services:
     env: docker
     region: Frankfurt
     plan: free
-    dockerfilePath: gift/Dockerfile
+    dockerfilePath: Dockerfile
