--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Gifted latest multi device whatsapp bot",
   "main": "gifted/gifted",
   "type": "module",
+  "engines" : { "node": "v18.16.0", "npm": "9.5.1" },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node gifted/gifted"
+    "start": "pm2 start index.js --deep-monitoring --attach --name gifted",
+    "stop": "pm2 stop gifted",
+    "restart": "pm2 restart gifted"
   },
   "keywords": ["gifted-md", "whatsapp-bot", "gifted-tech"],
   "author": "Gifted Tech",
@@ -50,7 +52,7 @@
     "node-webpmux": "^3.2.0",
     "os": "^0.1.2",
     "pino": "^8.20.0",
-    "pm2": "latest",
+    "pm2": "^5.2.0",
     "proto": "^1.0.19",
     "qrcode": "^1.5.3",
     "readline": "^1.3.0",
