--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
+    "fs-extra": "^10.1.0",
     "google-it": "^1.6.4",
+    "heroku-client": "3.1.0",
     "human-readable": "^0.2.1",
     "latest": "^0.2.0",
     "instagram-user": "^2.0.1",
@@ -54,13 +56,29 @@
     "pino": "^8.20.0",
     "pm2": "^5.2.0",
     "proto": "^1.0.19",
-    "qrcode": "^1.5.3",
+    "qrcode": "latest",
     "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
+    "simple-git": "^3.15.1",
     "tesseract.js": "^5.1.0",
     "translate-google-api": "^1.0.4",
     "uuid": "^9.0.1",
     "yt-search": "^2.11.0",
     "ytdl-core": "^4.11.5"
-  }
-  }
+   },
+   "directories": {
+             "lib": "gift",
+             "assets": "gifted/img"
+   },
+   "devDependencies": {
+             "pino": "^7.0.5"
+   },
+   "repository": {
+             "type": "git",
+             "url": "git+https://github.com/mouricedevs/gifted-md.git"
+   },
+   "bugs": {
+             "url": "https://github.com/mouricedevs/gifted-md/issues"
+   },
+   "homepage": "https://github.com/mouricedevs/gifted-md#readme"
+}
