--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.2.0",
     "os": "^0.1.2",
+    "pastebin-js": "^1.0.6",
+    "performance-now": "^2.1.0",
     "pino": "^8.20.0",
     "pm2": "^5.2.0",
     "proto": "^1.0.19",
