--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "5.0.0",
   "description": "Gifted latest multi device whatsapp bot",
   "main": "./gifted.js",
-  "type": "module",
+  "type": "commonjs",
   "engines" : { "node": "v20.15.0", "npm": "10.7.0" },
   "scripts": {
     "start": "pm2 start gifted.js --deep-monitoring --attach --name gifted",
