--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "logo": "https://telegra.ph/file/a202f454c9532c3f5b7f8.jpg",
   "keywords": ["gifted-md", "giftedtech", "Gifted-Md"],
   "success_url": "/gifted/",
-  "stack": "container",
+  "stack": "heroku-24",
   "env": { 
     "SESSION_ID": {
       "description": "Put Your Session Id. It must start with Gifted~",
