--- a/app.json
+++ b/app.json
@@ -99,18 +99,11 @@
       "value": "false"
     }
     },
-    "formation": {
-                "web": {
-                        "quantity": 1,
-                        "size": "Standard-2X"
-                }
-        },
-    "addons": [{ "plan": "heroku-postgresql:essential-1" }],
     "buildpacks": [
-    {"url": "https://github.com/heroku/heroku-buildpack-nodejs#latest"},
+    {"url": "heroku/nodejs"},
     {"url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick.git"},
     {"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"},
     {"url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"}
   ]
-}
+    }
 
