--- a/package.json
+++ b/package.json
@@ -71,5 +71,20 @@
     "uuid": "^9.0.1",
     "yt-search": "^2.11.0",
     "ytdl-core": "^4.11.5"
-   }
+   },
+     "directories": {
+      "lib": "gift",
+      "plugins": "gifted/cmds"
+   },
+   "devDependencies": {
+      "pino": "^7.0.5"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/mouricedevs/Gifted-Md.git"
+   },
+   "bugs": {
+      "url": "https://github.com/mouricedevs/Gifted-Md/issues"
+   },
+   "homepage": "https://github.com/mouricedevs/Gifted-Md#readme"
 }
