--- a/app.json
+++ b/app.json
@@ -97,10 +97,17 @@
       "description": "Put true if you want to reject call",
       "required": false,
       "value": "false"
-    }
+     }
     },
+    "formation": {
+                "web": {
+                        "quantity": 1,
+                        "size": "Standard-2X"
+                }
+        },
+    "addons": [{ "plan": "heroku-postgresql:essential-0" }],
     "buildpacks": [
-    {"url": "heroku/nodejs"},
+    {"url": "https://github.com/heroku/heroku-buildpack-nodejs#latest"},
     {"url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick.git"},
     {"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"},
     {"url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"}
