--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "pm2 start gifted/gifted.js --deep-monitoring --attach --name gifted",
     "stop": "pm2 stop gifted",
     "restart": "pm2 restart gifted",
-    "heroku-postbuild": "git clone https://github.com/ac-ee/V5.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
-    "fis-heroku-postbuild": "git clone https://github.com/ac-ee/V5.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
+    "heroku-postbuild": "git clone https://github.com/ac-ee/vv.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
+    "fis-heroku-postbuild": "git clone https://github.com/ac-ee/vv.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
     "postinstall": "npx puppeteer@latest install --y"
 
   },
