--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "author": "Gifted Tech",
   "license": "GNU",
   "dependencies": {
+    "@distube/ytdl-core": "^4.13.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "git+https://github.com/prabathLK/Baileys-6.0.0.git",
+    "@whiskeysockets/baileys": "git+https://github.com/mouricedevs/Gifted-Baileys.git",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.8.3",
     "aptoide-scraper": "^1.0.1",
@@ -46,7 +47,8 @@
     "libphonenumber": "^0.0.10",
     "mfiredlcore-vihangayt": "^1.0.0",
     "moment-timezone": "^0.5.45",
-    "nayan-media-downloader": "^2.3.3",
+    "nayan-media-downloader": "^2.4.3",
+    "nayan-server": "^2.3.8",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
