--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gifted latest multi device whatsapp bot",
   "main": "./gifted/gifted.js",
   "type": "module",
-  "engines" : { "node": "v20.15.0", "npm": "10.8.2" },
+  "engines" : { "node": "v20.15.1", "npm": "10.8.2" },
   "scripts": {
     "start": "pm2 start gifted/gifted.js --deep-monitoring --attach --name gifted",
     "stop": "pm2 stop gifted",
@@ -68,7 +68,7 @@
     "translate-google-api": "^1.0.4",
     "uuid": "^9.0.1",
     "yt-search": "^2.11.0",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "github:mouricedevs/ytdl-core#main"
    },
      "directories": {
       "lib": "gift",
